--- a/style.css
+++ b/style.css
@@ -63,6 +63,22 @@ button {
     transition: all 0.3s ease;
 }
 
+button:hover {
+    background-color: white;
+}
+
+.sedans button:hover a {
+    color: hsl(31, 77%, 52%);
+}
+
+.suvs button:hover a {
+    color: hsl(184, 100%, 22%);
+}
+
+.luxury button:hover a {
+    color: hsl(179, 100%, 13%);
+}
+
 a {
     text-decoration: none;
     color: #fff;
